feat: add DASICS_SKIP_FAULT_INST macro to decide whether to skip the faulting instr or shutdown, which can be controlled by DSKIP makefile variable

--- a/test_payload/Makefile
+++ b/test_payload/Makefile
@@ -21,6 +21,9 @@ INCLUDE_FLAG = \
 
 CFLAGS = -O0 -fno-builtin -nostdlib -T $(LDSCRIPT) -Wall -mcmodel=medany $(INCLUDE_FLAG) -nostdinc -g -fvar-tracking
 
+ifdef DSKIP
+CFLAGS += -DDASICS_SKIP_FAULT_INST
+endif
 
 default: $(ELF)
 
