modify Makefile to use riscv64-unknown-linux-gnu

--- a/test_payload/Makefile
+++ b/test_payload/Makefile
@@ -1,6 +1,6 @@
 NAME = test_payload
 ELF = $(NAME)
-HOST ?= riscv64-unknown-elf
+HOST ?= riscv64-unknown-linux-gnu
 CC = $(HOST)-gcc
 OBJDUMP = $(HOST)-objdump
 
